# tools

./: README.md
obj-conv/: .gitignore  Cargo.toml  README.md  lc3os.asm  lc3os.mem
obj-conv/src/: main.rs
obj-conv/src/file_formats/: lc3tools.rs  lumetta.rs  mod.rs
slidedeck/: Cargo.toml  slides.mem
slidedeck/src/: common.rs  ferris.rs  main.rs
